--- a/index.html
+++ b/index.html
@@ -5,21 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=s, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="dist/main.css">
 </head>
 
 <body>
+    <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1"
+        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <defs>
+            <symbol id="icon-menu" viewBox="0 0 32 32">
+                <path d="M2 6h28v6h-28zM2 14h28v6h-28zM2 22h28v6h-28z"></path>
+            </symbol>
+        </defs>
+    </svg>
     <header class="Header">
         <div class="container">
             <a class="Header-logo" href="">
                 <img src="img/site-logo.png" alt="">
             </a>
+            <button class="Header-menu-switch" type="button">
+                <svg class="icon icon-menu">
+                    <use xlink:href="#icon-menu"></use>
+                </svg>
+            </button>
             <div class="Header-menu">
                 <div class="Header-menu-user">
                     <a href="">Register</a>
                     <a href="">Sign In</a>
                 </div>
-                <a href="">List Your Property</a>
+
+                <a class="button" href="">List Your Property</a>
                 <div class="Header-menu-helper">
                     <select>
                         <option value="">En</option>
