responsive doğru giderken

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="dist/main.css">
+    <link rel="stylesheet" href="dist//main.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             <a class="Header-logo" href="">
                 <img src="img/site-logo.png" alt="">
             </a>
-            <button class="Header-menu-switch" type="button">
+            <button class="Header-switch" type="button">
                 <svg class="icon icon-menu">
                     <use xlink:href="#icon-menu"></use>
                 </svg>
@@ -46,8 +46,6 @@
                 </div>
             </div>
         </div>
-
-
     </header>
 </body>
 
