--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=s, initial-scale=1.0">
     <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="dist//main.css">
+    <link rel="stylesheet" href="dist/main.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             <a class="Header-logo" href="">
                 <img src="img/site-logo.png" alt="">
             </a>
-            <button class="Header-switch" type="button">
+            <button class="Header-switch button button-icon" type="button">
                 <svg class="icon icon-menu">
                     <use xlink:href="#icon-menu"></use>
                 </svg>
@@ -34,8 +34,7 @@
                     <a href="">Register</a>
                     <a href="">Sign In</a>
                 </div>
-
-                <a class="button" href="">List Your Property</a>
+                <a class=" Header-menu-property button button-blue" href="">List Your Property</a>
                 <div class="Header-menu-helper">
                     <select>
                         <option value="">En</option>
@@ -47,6 +46,60 @@
             </div>
         </div>
     </header>
+    <nav class="Navigation">
+        <div class="container">
+            <a class="Navigation-item" href="">menu1</a>
+            <a class="Navigation-item" href="">menu2</a>
+            <a class="Navigation-item" href="">menu3</a>
+            <a class="Navigation-item" href="">menu4</a>
+            <a class="Navigation-item" href="">menu4</a>
+            <a class="Navigation-item" href="">menu4</a>
+            <a class="Navigation-item" href="">menu4</a>
+            <a class="Navigation-item" href="">menu4</a>
+            <a class="Navigation-item" href="">menu4</a>
+            <a class="Navigation-item" href="">menu4</a>
+            <a class="Navigation-item" href="">menu4</a>
+        </div>
+    </nav>
+    <main class="Main">
+        <section class="Showcase">
+            <div class="container">
+                <h1>More deals than days a year</h1>
+                <h3>From cosy country homes to funky city flats</h3>
+                <div class="Search">
+                    <form class="Search-form" action="">
+                        <div>
+                            <div>
+                                <input type="text">
+                            </div>
+                            <small>Destination, property name or number of</small>
+                        </div>
+                        <div>
+                            <div>
+                                <input type="date">
+                            </div>
+                            <small>when</small>
+                        </div>
+                        <div>
+                            <select name="" id="">
+                                <option value="">123</option>
+                            </select>
+                        </div>
+                        <div>
+                            <button type="button">
+                                Let's get started
+                            </button>
+                        </div>
+                        <div class="asd">
+                            Are you travelling for work?
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="js/jquery-3.5.0.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
